--- a/src/ProdRateCalc_5.26.ipynb
+++ b/src/ProdRateCalc_5.26.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "id": "AP2bFs2Ckf44"
    },
@@ -13,7 +13,8 @@
     "import pmagpy.pmag as pmag\n",
     "import pandas as pd\n",
     "#hello katie\n",
-    "#github is hard"
+    "#github is hard\n",
+    "# moe learned github"
    ]
   },
   {
